# bioclip-image-search-lite

./: .gitattributes  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: sync-to-hf-space.yml
docs/: cli-design.md  deployment-hf-spaces.md  hf-data-card-README.md
scripts/: launch_lite.slurm
scripts/data/: README.md  convert_duckdb_lite.py  convert_duckdb_lite.slurm  optimize_duckdb.py  optimize_duckdb.slurm  validate_optimized_duckdb.py  validate_optimized_duckdb.slurm
src/bioclip_lite/: cli.py  config.py  server.py
src/bioclip_lite/services/: image_service.py  model_service.py  search_service.py
